modified:   .vscode/settings.json 	new file:   AVLTree.cpp 	new file:   AVLTree.exe 	new file:   binaryTree.cpp 	new file:   binaryTree.exe 	new file:   bst.cpp 	new file:   expresssionTree.cpp 	new file:   gfg_practice.cpp 	new file:   k-th_smallest_in_BST.cpp 	modified:   linked_list_oops.cpp 	new file:   nakal.cpp 	new file:   new.cpp 	modified:   new_ll.cpp 	new file:   operatorOverloading-Fractions.cpp 	new file:   queue.cpp 	new file:   quicksort.cpp 	new file:   stack.cpp 	new file:   tempCodeRunnerFile.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,15 @@
         "ostream": "cpp",
         "iosfwd": "cpp",
         "sstream": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     }
 }
